# Saigen

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: capture_commands.rs  case_commands.rs  mod.rs  project_commands.rs  run_commands.rs  stats_commands.rs  suite_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/components/cases/: CaseForm.tsx  CaseRow.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/components/projects/: ProjectCard.tsx  ProjectForm.tsx
src/components/recorder/: EndRunDialog.tsx  RecordingBar.tsx  StepItem.tsx  StepList.tsx
src/components/runs/: OperationsLog.tsx  RunHistoryModal.tsx  RunSummary.tsx  ScreenshotGallery.tsx
src/components/suites/: SuiteCard.tsx  SuiteForm.tsx
src/components/ui/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  EmptyState.tsx  Modal.tsx
src/hooks/: useRecorder.ts
src/lib/: commands.ts
src/pages/: Cases.tsx  Dashboard.tsx  Projects.tsx  Recorder.tsx  RunDetail.tsx  Suites.tsx
src/store/: projectStore.ts  suiteStore.ts  testCaseStore.ts
src/types/: index.ts
